# Spectra

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  package-lock.json
.github/workflows/: drone-agent.yml  edge-agent.yml  gateway.yml  manifests.yml  pages.yml  rf-academy.yml  web.yml
apps/alerting/: kustomization.yaml  rules.yaml
apps/control/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
apps/devices-bridge/: configmap.yaml  deployment.yaml
apps/gateway/: deployment.yaml
apps/grafana/: kustomization.yaml
apps/loki/: configmap.yaml  deployment.yaml  service.yaml
apps/mosquitto/: configmap.yaml  deployment.yaml  service.yaml
apps/rf-academy/: configmap.yaml  daemonset.yaml  kustomization.yaml  namespace.yaml  service.yaml
apps/simulator/: configmap.yaml  deployment.yaml  kustomization.yaml
apps/telegraf/: configmap.yaml  deployment.yaml
apps/web/: deployment.yaml  kustomization.yaml
clusters/field/: README.md  bootstrap-pi.sh  root-app.yaml
clusters/homelab/: root-app.yaml
clusters/rf-academy/: bootstrap-pi.sh  root-app.yaml
docs/: ARCHITECTURE.md  DOMAIN.md  GO-LIVE.md
edge/: README.md
edge/agent/: Dockerfile  agent.py  config.example.yaml  fm_demod.py  lora_activity.py  (+1 more)
edge/drone-agent/: Cargo.toml  Dockerfile
edge/drone-agent/src/: main.rs
server/: Cargo.toml
server/src/: adsb.rs  dsp.rs  main.rs
tools/: check-links.mjs  genkey.mjs
web/: Dockerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wrangler.jsonc
(+147 files in other folders)
