[package]
name = "rf-academy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rf-academy"
path = "src/main.rs"

[dependencies]
soapysdr = "0.4"
rustfft = "6"
num-complex = "0.4"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
